<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/airbg350"
    tools:context=".CreateFlight">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/create_a_new_flight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/flight_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="FlightNumber"
        android:hint="@string/flight_number"
        android:inputType="number"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/source"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="FlightNumber"
        android:hint="@string/source_airport"
        android:inputType="text"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flight_number" />

    <EditText
        android:id="@+id/depart_date"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="FlightNumber"
        android:hint="@string/departure_date"
        android:inputType="date"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source" />

    <EditText
        android:id="@+id/depart_time"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="FlightNumber"
        android:hint="@string/departure_time"
        android:inputType="datetime"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depart_date" />

    <Spinner
        android:id="@+id/depart_suffix"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:entries="@array/am_pm_array"
        android:prompt="@string/select_time_suffix"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depart_time" />

    <EditText
        android:id="@+id/dest"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="FlightNumber"
        android:hint="@string/destination_airport"
        android:inputType="text"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depart_suffix" />

    <EditText
        android:id="@+id/arrive_date"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="FlightNumber"
        android:hint="@string/arrival_date"
        android:inputType="date"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dest" />

    <EditText
        android:id="@+id/arrive_time"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="FlightNumber"
        android:hint="@string/arrival_time"
        android:inputType="datetime"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrive_date" />

    <Spinner
        android:id="@+id/arrive_suffix"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:entries="@array/am_pm_array"
        android:prompt="@string/select_time_suffix"
        android:padding="10dp"
        android:background="@android:drawable/btn_default_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrive_time" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>